fix(edt): исправить ClassNotFoundException для JavaFX при установке плагина запрета редактирования
Добавлены libopenjfx-java пакет и JVM параметры для корректной работы JavaFX:
- --add-modules=javafx.controls,javafx.fxml,javafx.web
- --module-path=/usr/share/openjfx/lib

Исправляет ошибку: java.lang.ClassNotFoundException: javafx.application.Platform cannot be found by org.eclipse.swt_3.119.0.v20220215-1102